# psbt-inspector

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml
src/: app.rs  event.rs  main.rs  tui.rs
src/modules/: mod.rs
src/modules/ai/: client.rs  context.rs
src/modules/bitcoin/: mod.rs  multisig.rs  psbt.rs  psbt_v2.rs
src/modules/config/: mod.rs
src/modules/ui/: ai_overlay.rs  builder.rs  inspector.rs  mod.rs
