[package]
name = "psbt-inspector"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui   = "0.29"
crossterm = "0.28"
tokio     = { version = "1", features = ["full"] }
anyhow    = "1"
bitcoin   = { version = "0.32", features = ["serde"] }
base64    = "0.22"
thiserror = "1"
hex       = "0.4"
serde     = { version = "1", features = ["derive"] }
toml      = "0.8"
dirs      = "5"
reqwest   = { version = "0.12", features = ["json"] }
serde_json = "1"
