[package]
name = "psbt-inspector"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui   = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio     = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
anyhow    = "1"
bitcoin   = { version = "0.32", features = ["serde"] }
base64    = "0.22"
thiserror = "1"
hex       = "0.4"
serde     = { version = "1", features = ["derive"] }
toml      = "0.8"
dirs      = "5"
reqwest   = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
dotenvy      = "0.15"
